--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,10 @@
 ====================
+v.1.0.1
+====================
+
+* Make tlc build on Linux.
+
+====================
 v.1.0.0
 ====================
 
