--- a/TODO
+++ b/TODO
@@ -1,1 +1,4 @@
-* Make tests run on non-OpenBSD.
+* Fix tests failing on MacOS.
+* Fix tests failing on Linux.
+* Add NetBSD support.
+* Add Windows support.
