--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,10 @@
 ====================
+v.1.2.1
+====================
+
+* Fix installation under OpenBSD Ports system.
+
+====================
 v.1.2.0
 ====================
 
